--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,7 @@ eureka:
     register-with-eureka: true
     fetch-resigtry: true
     service-url:
-    defaultZone: http://192.168.0.136:8761/eureka/
+    #defaultZone: http://192.168.0.136:8761/eureka/
+    defaultZone: http://192.168.240.1:8761/eureka/
 instance:
     hostname:localhost
